finally done   all task 1 and also redis
