# Task_01/api/main.go
@@ -3,6 +3,7 @@ package api
 import (
 	_ "user/api/docs"
 	"user/api/handler"
+	"user/pkg/helper"
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -10,25 +11,32 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
 func NewServer(h *handler.Handler) *gin.Engine {
 	r := gin.Default()
+	//Auth sign up and login
+	r.POST("/auth/login", h.Login)
+	r.POST("/auth/sign-up", h.SignUp)
+
 	//Users
 
-	r.POST("/user", h.CreateUser)
-	r.GET("/user/:id", h.GetUser)
-	r.GET("/user", h.GetAllUser)
-	r.PUT("/user/:id", h.UpdateUser)
-	r.DELETE("/user/:id", h.DeleteUser)
-	r.GET("/deleted_users", h.GetAllDeletedUser)
+	r.POST("/user", helper.AuthMiddleware, h.CreateUser)
+	r.GET("/user/:id", helper.AuthMiddleware, h.GetUser)
+	r.GET("/user", helper.AuthMiddleware, h.GetAllUser)
+	r.PUT("/user", helper.AuthMiddleware, h.UpdateUser)
+	r.DELETE("/user", helper.AuthMiddleware, h.DeleteUser)
+	r.GET("/deleted_users", helper.AuthMiddleware, h.GetAllDeletedUser)
 
 	//Posts
-	r.POST("/post", h.CreatePost)
-	r.GET("/post/:id", h.GetPost)
-	r.GET("/post", h.GetAllPost)
-	r.PUT("/post/:id", h.UpdatePost)
-	r.DELETE("/post", h.DeletePost)
-	r.GET("/my/post/:created_by", h.GetMyPost)
-	r.GET("/deleted_posts", h.GetAllDeletedPost)
+	r.POST("/post", helper.AuthMiddleware, h.CreatePost)
+	r.GET("/post/:id", helper.AuthMiddleware, h.GetPost)
+	r.GET("/post", helper.AuthMiddleware, h.GetAllPost)
+	r.PUT("/post", helper.AuthMiddleware, h.UpdatePost)
+	r.DELETE("/post", helper.AuthMiddleware, h.DeletePost)
+	r.GET("/my/post/:created_by", helper.AuthMiddleware, h.GetMyPost)
+	r.GET("/deleted_posts", helper.AuthMiddleware, h.GetAllDeletedPost)
 
 	// r.DELETE("/my/posts", h.getmypost)
 
