# Task_01/models/post.go
@@ -1,7 +1,6 @@
 package models
 
 type CreatePost struct {
-	UserId      string   `json:"created_by"`
 	Description string   `json:"description"`
 	Photos      []string `json:"photos" form:"photos"`
 }
@@ -12,15 +11,10 @@ type Post struct {
 	Photos      []string `json:"photos"`
 	CreatedAt   string   `json:"created_at"`
 	CreatedBy   string   `json:"created_by"`
-	UpdatedAt   string   `json:"updated_at"`
-	UpdatedBy   string   `json:"updated_by"`
-	DeletedAt   string   `json:"deleted_at"`
-	DeletedBy   string   `json:"deleted_by"`
 }
 
 type DeletePostRequest struct {
-	DeletedBy string `json:"deleted_by"`
-	Id        string `json:"id"`
+	Id string `json:"id"`
 }
 type MyPostRequest struct {
 	CreatedBy string `json:"created_by"`
@@ -30,7 +24,6 @@ type UpdatePost struct {
 	ID          string   `json:"id"`
 	Description string   `json:"description"`
 	Photos      []string `json:"photos"`
-	UpdatedBy   string   `json:"updated_by"`
 }
 
 type GetAllPostRequest struct {
