# Task_01/models/user.go
@@ -19,25 +19,6 @@ type IdRequest struct {
 	Id string `json:"id"`
 }
 
-type LoginRequest struct {
-	ID       string `json:"id"`
-	Username string `json:"username"`
-	Password string `json:"password"`
-}
-
-type SignUp struct {
-	Username string `json:"username"`
-	Phone    string `json:"phone"`
-}
-
-type LoginRespond struct {
-	ID       string `json:"id"`
-	Username string `json:"username"`
-	Password string `json:"password"`
-}
-type LoginRes struct {
-	Token string `json:"token"`
-}
 type GetAllUserRequest struct {
 	Page     int    `json:"page"`
 	Limit    int    `json:"limit"`
@@ -47,12 +28,4 @@ type GetAllUserRequest struct {
 type GetAllUser struct {
 	Users []User `json:"user"`
 	Count int    `json:"count"`
-}
-type ChangePassword struct {
-	OldPassword string `json:"oldpassword"`
-	NewPassword string `json:"newpassword"`
-}
-type ReqNewPassword struct {
-	Id       string `json:"id"`
-	Password string `json:"password"`
 }
